--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+.container{
+    display: flex;
+}
+
+
 .grid{
     width: 200px;
     height: 400px;
@@ -13,4 +18,17 @@
 
 .tetromino{
     background-color: goldenrod;
+}
+
+.mini-grid{
+    margin-left: 50px;
+    width: 80px;
+    height: 80px;
+    display: flex;
+    background-color: grey;
+}
+
+.mini-grid div{
+    height: 20px;
+    width: 20px;
 }
